--- a/css-simple-calculator.css
+++ b/css-simple-calculator.css
@@ -1,23 +1,82 @@
-html {
-    font-size: 10px ;
-}
 
-body {
-    border: 0;
-    margin: 0;
-}
+        /* all */
 
-header {
-    margin: 0;
-    background-color: #343434;
-    height: 7rem;
-    width: 100%;
-}
-
-h1 {
-    font-size: 5rem;
-    font-weight: 600;
-    margin: 0;
-    margin-left: 3rem;
-    font-family: 'Roboto Condensed', sans-serif;
-}
+        * {
+            padding: 0;
+            margin: 0;
+        }
+        
+        html {
+            font-size: 10px ;
+        }
+        
+        h1 {
+            font-size: 5rem;
+            font-weight: 500;
+            color: whitesmoke;
+            font-family: cursive;
+        }
+        
+                /* for header */
+        
+        header {
+            background-color: #343434;
+            height: 7rem;
+            width: 100%;
+        }
+        
+        header h1 {
+            margin-left: 3rem;
+            width: 100%;
+        }
+        
+        
+                /* for calculator */
+        
+        article {
+            background-color: rgb(171, 171, 172);
+            padding: 3rem 5rem 0rem 5rem;
+            width: 70%;
+            margin: 0 auto 0 auto;
+            height: 10rem;
+        }
+        
+        section {
+            display: flex;
+            justify-content: center;
+        }
+        
+        section * {
+            margin-right:0.5rem;
+            width: 12rem;
+        }
+        
+        section input{
+            height: 2rem;
+        }
+        
+        article h1 {
+            text-align: center;
+            display:none;
+        }
+        
+        article button {
+            width: 100%;
+            height: 3rem;
+        }
+        
+        
+                /* for footer */
+        
+        footer {
+            position: absolute;
+            bottom: 0;
+            font-size: 3rem;
+            background-color: #343434;
+            width: 100%;
+            font-family: cursive;
+        }
+        
+        .github {
+            color: whitesmoke;
+        }
