--- a/css-simple-calculator.css
+++ b/css-simple-calculator.css
@@ -31,15 +31,14 @@
             width: 100%;
         }
         
-        
                 /* for calculator */
         
         article {
             background-color: rgb(171, 171, 172);
             padding: 3rem 5rem 0rem 5rem;
-            width: 70%;
+            width: 60%;
             margin: 0 auto 0 auto;
-            height: 10rem;
+            max-height: auto;
         }
 
             /* input tags */
@@ -90,4 +89,17 @@
         
         .github {
             color: whitesmoke;
+        }
+        
+
+        /* Calculation history */
+
+        .calculation-history {
+            font-size: 2.5rem;
+        }
+
+        h3 {
+            font-family: cursive;
+            font-weight: 500;
+            display: none;
         }
