--- a/css-simple-calculator.css
+++ b/css-simple-calculator.css
@@ -35,7 +35,7 @@
         
         article {
             background-color: rgb(171, 171, 172);
-            padding: 3rem 5rem 0rem 5rem;
+            padding: 3rem 5rem 0 5rem;
             width: 60%;
             margin: 0 auto 0 auto;
             max-height: auto;
@@ -96,9 +96,12 @@
 
         .calculation-history {
             font-size: 2.5rem;
+            display: flex;
+            flex-direction: column-reverse;
         }
 
         h3 {
+            font-size: 3rem;
             font-family: cursive;
             font-weight: 500;
             display: none;
